--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.11.0",
     "styled-components": "^6.1.8",
     "styled-reset": "^4.5.2",
     "web-vitals": "^2.1.4",
